--- a/Tex/conclusion.tex
+++ b/Tex/conclusion.tex
@@ -1,5 +1,5 @@
 \chapter{Conclusion and Outlook}
-There is still an ongoing discussion about the feasibility of \textit{Incoherent Diffractive Imaging} and about in which areas it can provide advantages about already established methods. It has not yet been experimentally proven that the assumptions made about the statistics of inner shell fluorescence are valid at the atomic level. Under the assumption of chaotic light, classical wave theory can illustrate the basic working principle.  In the quantum mechanical description of the underlying two-photon interference, indistinguishability between the quantum paths leading from the emission of two photons to simultaneous detection in two detectors creates the spatial bunching in the fluorescence patterns. Both explanations predict that a successful IDI experiment has to be designed with few distinguishable paths or modes.
+There is still an ongoing discussion about the feasibility of \textit{Incoherent Diffractive Imaging} and its potential advantages over already established methods. It has not yet been experimentally proven that the assumptions made about the statistics of inner shell fluorescence are valid at the atomic level. Under the assumption of chaotic light, classical wave theory can illustrate the basic working principle.  In the quantum mechanical description of the underlying two-photon interference, indistinguishability between the quantum paths leading from the emission of two photons to simultaneous detection in two detectors creates the spatial bunching in the fluorescence patterns. Both explanations predict that a successful IDI experiment has to be designed with few distinguishable paths or modes.
 
 The present work contributes simulations to validate theoretical considerations about the Signal-to-Noise characteristics and to optimize the experimental setup. Furthermore, previously published results indicating that IDI can extract spatial information out of X-ray fluorescence intensity patterns were validated.
 
