--- a/Tex/experiment.tex
+++ b/Tex/experiment.tex
@@ -92,7 +92,7 @@ The measurements do not show a clear and significant difference between the two 
 
 \begin{figure}
 	\centering
-	\begin{subfigure}[b]{0.4\textwidth}
+	\begin{subfigure}[b]{0.42\textwidth}
 		\includegraphics[width=\linewidth]{images/ps5.pdf}
 	\end{subfigure}
 	\begin{subfigure}[b]{0.42\textwidth}
@@ -134,7 +134,7 @@ A X-ray diffraction $\omega$-scan with copper K$_\alpha$ (PANAlytical X’Pert P
 \section{Setup of the Experiment}
 The setup used at the experimental station EH5 at SACLA is shown in \fref{fig:setup}. 
 
-The FEL provided approximately 10\,fs long hard X-ray pulse with $\approx 10^{11}$ photons at 11\,keV, just above the gallium K-edge and below the arsenic K-edge (see \fref{tab:elements}), and 30\,Hz repetition rate \cite{tono2013}. The beam was focused by the \textit{100\,exa} KB nano-focusing system. The focus spot along the beam direction was found by optimizing the strength of (non-linear) amplified spontanous emission (ASE) of a copper foil, resulting in focal FWHM of 200\,nm vertical/100\,nm horizontal as determined by a wirescan \cite{yumoto2020,handa2010,yoneda2015}.
+The FEL provided approximately 10\,fs long hard X-ray pulse with $\approx 10^{11}$ photons at 11\,keV, just above the gallium K-edge and below the arsenic K-edge (see \fref{tab:elements}), and 30\,Hz repetition rate \cite{tono2013}. The beam was focused by the \textit{100\,exa} KB nano-focusing system \cite{yumoto2020}. The focus spot along the beam direction was found by optimizing the strength of (non-linear) amplified spontanous emission (ASE) of a copper foil, resulting in focal FWHM of 200\,nm vertical/100\,nm horizontal as determined by a wire scan \cite{handa2010,yoneda2015}.
 
 The sample was mounted in a 45° angle to the beam on a stack of two rotational/two translational/two rotational/three translational stages to allow scanning of the sample, to ensure perpendicularity of the scanning directions to the beam to stay within the Rayleigh length (approx. 100\,\textmu m horizontal/200\,\textmu m vertical) while also ensuring a parallel alignment of the sample surface to one of the detectors. 
 
@@ -146,11 +146,11 @@ The samples were scanned with a mean step size of 20\,\textmu m in horizontal di
 \begin{figure}
 	\centering
 	\includegraphics[width=0.75\linewidth]{images/setup.pdf}
-	\caption[Experimental setup at SACLA]{Experimental setup at SACLA: The sample is mounted on a scanning stage and aligned to stay in focus during the scan and be parallel to the octal MPCCD detector, which is in a distance $d_{octal}$. The angle between incoming FEL and Sample is 45°. Behind the sample, a stray light filter, beamstop and (depending on the sample) a filter foil is installed. The dual detector is mounted $d_{dual}$=1\,m away from the sample perpendicular the FEL beam. To reduce air scattering, a vacuum tube is installed in the path from sample to dual.}
+	\caption[Experimental setup at SACLA]{Experimental setup at SACLA: The sample is mounted on a scanning stage and aligned to stay in focus during the scan and be parallel to the octal MPCCD detector, which is in a distance $d_{octal}$. The angle between incoming FEL and Sample is 45°. Behind the sample, a stray light filter, beamstop and (depending on the sample) a filter foil is installed. The dual detector is mounted $d_{dual}$=1\,m away from the sample perpendicular the FEL beam. To reduce air scattering and absorption, a vacuum tube is installed in the path from sample to the dual detector.}
 	\label{fig:setup}
 \end{figure}
 \paragraph{Imaging the Focus}
-To image the focus, one of the following foils with purity >99.99\% was mounted on the sample holder: 500\,nm iron (Goodfellow), 10\,\textmu m iron (Nilaco), 5\,\textmu m (Nilaco) and 20\,\textmu m (Goodfellow). The fluorescence was recorded using the dual detector at a distance of $d_\text{dual}$=1\,m.
+To image the focus, one of the following foils with purity >99.99\% was mounted on the sample holder: 500\,nm iron (on polymer support, Goodfellow), 10\,\textmu m iron (Nilaco), 5\,\textmu m (Nilaco) and 20\,\textmu m (Goodfellow). The fluorescence was recorded using the dual detector at a distance of $d_\text{dual}$=1\,m.
 The X-ray beam was attenuated by 0.4\,mm silicon, resulting in 20-30\,\textmu J  energy at the sample for pulse energies at the upstream energy monitors of 400\,\textmu J \cite{yabashi2015,tono2013}.
 \paragraph{Imaging Nanoparticles}
 For imaging the prepared iron nanoparticle and reference samples, the octal detector, which was the main imaging detector for these samples was moved to $d_\text{octal}\approx$43\,cm. The vacuum tube in front of the dual detector was partially removed to avoid mechanical interference. The sample was slightly moved out of focus along the beam direction by 400\,\textmu m instead of using any attenuation to increase the number of fluorescence photons. In between the nanoparticle samples, a single 10\,\textmu m iron foil measurement using the dual detector was taken to confirm the beam conditions.
@@ -193,7 +193,7 @@ Masks for both detectors were created based on the standard deviation over diffe
 \end{figure}
 
 \paragraph{Detector Artifacts}
-During the experiment, an unnoticed failure of the electronics of the octal detector occurred, manifesting as periodic noise on most of the detector tiles at a much higher level than expected (see \fref{fig:octalissue} for an illustration). Not all columns of a tile or read-out port were affected, in contrast to common-mode effects more commonly encountered with CCD detectors. As the overall affected area of the detector is substantial and the noise leaks through the photon counting scheme by slightly influencing the probability of a pixel being considered a photon hit, causing correlations and therefore artifacts in the reconstruction in one direction, a correction was applied to the affected columns of affected tiles of the detector. For the correction, affected columns were first identified by filtering on the Fourier transform, neighboring effected columns are considered as a block and the medians over those blocks were calculated and subtracted. This scheme was chosen instead of the more commonly used portwise common mode correction due to the uneven strength of the artifact (see \fref{fig:app_correction} for a comparison). Using this correction reduced the artifact, but did not completely remove it. As the remaining artifact in the reconstructions is limited to low $q$ compared to the expected positions of the features of the samples and only two orthogonal lines, it can be masked out.
+During the experiment, an unnoticed failure of the electronics of the octal detector occurred, manifesting as periodic noise on most of the detector tiles at a much higher level than expected (see \fref{fig:octalissue} for an illustration). Not all columns of a tile or read-out port were affected, in contrast to common-mode effects more commonly encountered with CCD detectors. The overall affected area of the detector is substantial and the noise leaks through the photon counting scheme by slightly influencing the probability of a pixel being considered a photon hit. As this causes correlations between affected pixels and therefore artifacts in the reconstruction, a correction was applied to the affected columns of affected tiles of the detector. For the correction, affected columns were first identified by filtering on the Fourier transform. Neighboring effected columns were considered as a block and the medians over those blocks were calculated and subtracted. This scheme was chosen instead of the more commonly used portwise common mode correction due to the uneven strength of the artifact (see \fref{fig:app_correction} for a comparison). Using this correction reduced the artifact, but did not completely remove it. As the remaining artifact in the reconstructions is limited to low $q$ compared to the expected positions of the features of the samples and only two orthogonal lines, it can be masked out.
 
 
 \begin{figure}
@@ -216,11 +216,11 @@ On these spectra, a regression was performed.  The model consisted of peaks at m
 \begin{equation}
 	w (x)= (1-p)\delta(x)+\rect\left(\frac{x-1/2}{E_{signal}}\right)\frac{p}{E_{signal}}
 \end{equation}
-was included, thus smearing the peaks to lower energies with a strength parameter $p$ (initialized as 25\%). The mean squared difference the logarithmic values was minimized. With this regression, an estimate for the number of modes of the binomial distribution as well as for the mean number of signal and scattering photons was found.
+was included, thus smearing the peaks to lower energies with a strength parameter $p$ (initialized as 25\%). The mean squared difference of the logarithmic values was minimized. With this regression, an estimate for the number of modes of the binomial distribution as well as for the mean number of signal and scattering photons was found.
 
 
 \paragraph{Photon counting}
-The mean number of signal and scattering photons found from the spectra as well as the peak width and the charge sharing point spread function for the detectors were used to find the thresholds for a classification of the pixel values into signal photon numbers for each of the groups as described in \fref{sec:chargesharing}. 
+The mean number of signal and scattering photons found from the spectra as well as the peak width and the charge sharing point spread function for the detectors were used to find the thresholds for the classification of the pixel values into signal photon numbers for each of the groups as described in \fref{sec:chargesharing}. 
 With the determined K$_\alpha$, K$_\beta$, and scattering intensities, 1000 images with 4096x4096 pixels were simulated with Gaussian charge sharing. The determined peak widths were used as the FWHM of the assumed to be Gaussian detector noise.  The number of signal photons corresponding with the highest probability to each energy was determined for 10\,eV bins. 
 
 \paragraph{Final shot filtering}
@@ -231,9 +231,9 @@ Before doing the reconstruction, a final filtering pass was performed on the ima
 
 
 \paragraph{Crystal orientation}
-For determining the relative orientation of the crystal with regards to the detector, Kossel lines as described in \fref{sec:kossel} can be used. This can either be done by reprojecting the planar detector onto a sphere by an inverse gnomonic projection and determining circle center and radius, eg. by an Hugh-Transform, or by a fitting conic sections to the lines on the planar detector \cite{morris1968,morawiec2016,faigel2016,herron2018}. As the observable curvature of the Kossel lines on the detector in an IDI setup is small and therefore the circles are difficult to determine, the second method was chosen. A semi-automatic alignment program was developed (\fref{fig:kosselfit}) to aid with the procedure.
+For determining the relative orientation of the crystal with regards to the detector, Kossel lines as described in \fref{sec:kossel} can be used. This can either be done by reprojecting the planar detector onto a sphere by an inverse gnomonic projection and determining circle center and radius a Hugh-Transform, or by fitting conic sections to the lines on the planar detector \cite{morris1968,morawiec2016,faigel2016,herron2018}. The observable curvature of the Kossel lines on the detector in an IDI setup is small. Hence, the centers of the circles would be challenging to determine, and the second method was chosen. A semi-automatic alignment program was developed (\fref{fig:kosselfit}) to aid with the procedure.
 
-For each sample, the images were split into sets of 5000 shots. After filtering for hot pixels and cutting bellow a noise threshold of 2\,keV, the mean was taken. To better distinguish the Kossel lines from the uniform fluorescence, a Gaussian blurred version ($\sigma$=20\, px) was subtracted (see \fref{fig:kosselgaasmean} for examples). The Kossel lines were roughly identified manually and the local maxima in the 20x20\,px surrounding block of an identified area were considered as points on the Kossel line. A least-square regression was performed,
+For each sample, the images were split into sets of 5000 shots. The mean was taken after filtering for hot pixels and cutting below a noise threshold of 2\,keV. To better distinguish the Kossel lines from the uniform fluorescence, a Gaussian blurred version ($\sigma$=20\, px) was subtracted (see \fref{fig:kosselgaasmean} for examples). The Kossel lines were roughly identified manually, and the local maxima in the 20x20\,px surrounding block of an identified area were considered as points $\vec{r}$ on a Kossel line. A least-square regression was performed,
 
 \begin{equation}
 	\arg\!\min_{R,t} \sum_{r} \min_{q\in Q} \left\Vert \frac{2 d  \left( \vec{r} - \vec{t} \right) \cdot \vec{Rq}}{\left|\vec{q}\right| \left| \left(\vec{r}-\vec{t}\right)\right|} -\lambda \right\Vert_2^2 \,,
@@ -247,7 +247,7 @@ $\vec{q}$ a reciprocal lattice vector and element of the allowed reflections $Q$
 \begin{figure}
 	\centering
 	\includegraphics[width=0.8\linewidth]{images/kosselfit.png}
-	\caption[User Interface for Kossel line based alignment]{User interface created for performing a regression of the detector orientation and position to the Kossel lines visible in experimental data. The lines can be automatically identified,  be  manually modified afterwards and the reflections considered selected. This tool is used to perform the alignment for the GaAs single crystal samples.}
+	\caption[User Interface for Kossel line based alignment]{User interface created for performing a regression of the detector orientation and position to the Kossel lines visible in experimental data. The lines can be automatically identified,  be  manually modified afterwards and the indices of potential lines to be considered selected. This tool was used to perform the alignment for the GaAs single crystal samples.}
 	\label{fig:kosselfit}
 \end{figure}
 
@@ -256,7 +256,7 @@ $\vec{q}$ a reciprocal lattice vector and element of the allowed reflections $Q$
 
 
 \subsection{Reconstruction}
-For the foil data, the small-angle approximation is valid, and each pixel approximately covers the same solid angle, permitting the use of a pixel-wise correlation after normalization as described in \fref{sec:normal} for the reconstruction of $|S(q)|^2$. For the nanoparticle data, the maximum recorded angles are higher and at the limit of the small-angle regime, resulting in $\delta q_x,_y$ between neighboring pixels being lower for pixels further off-axis. However, as the features in the structure factor are at relatively low $q$, the difference is less than the $q$ resolution, and the same reconstruction can be used.
+For the foil data, the small-angle approximation is valid, and each pixel approximately covers the same solid angle, permitting the use of a pixel-wise correlation after normalization as described in \fref{sec:normal} for the reconstruction of $|S(\vec{q})|^2$. For the nanoparticle data, the maximum recorded angles are higher and at the limit of the small-angle regime, resulting in $\delta q_x,_y$ between neighboring pixels being lower for pixels further off-axis. However, as the features in the structure factor are at relatively low $\left|\vec{q}\right|$, the difference is less than the $\vec{q}$ resolution, and the same reconstruction can be used.
 For the wide-angle crystal data, a full three-dimensional correlation of the rotation and offset corrected data was performed using the resampled FFT-based approach described in \fref{sec:corr}. This takes the varying solid angles fully into account.
 
 
@@ -264,7 +264,7 @@ For the wide-angle crystal data, a full three-dimensional correlation of the rot
 Applying the aforementioned preprocessing and analysis steps to the recorded fluorescence images for all three classes of samples leads to results as follows. 
 \subsection{Imaging the Focus}
 
-The regression of the spectra (\fref{fig:spectrafoil}) resulted in a mean K$_{\alpha}$ photon count per pixel of 0.004$\pm$0.001 (500\,nm iron foil) to 0.041$\pm$0.001 (20\,\textmu m copper foil). The mode number could not be reasonably estimated for the 500\,nm iron sample due to the influence of air scattering and fluorescence stemming from the experimental setup and low number of signal photons. For the other samples, the regression provided estimates in the range of 15-25 modes. The charge sharing approximation parameter $p$ was found to be 0.43$\pm$0.01, meaning about 40\% of the photon hits were affected. The simplifications of assuming a uniform charge cloud by using a convolution windows with a flat side lobe led to disagreement between the slightly curved histograms and the flat regressions in the valleys between integer multiples of the single-photon energy. This is no longer present in the spectra simulated with a Gaussian charge cloud (see \fref{fig:thresholdsfoil}) for an example.
+The regression of the spectra (\fref{fig:spectrafoil}) shows a mean K$_{\alpha}$ photon count per pixel of 0.004$\pm$0.001 (500\,nm iron foil) to 0.041$\pm$0.001 (20\,\textmu m copper foil). The mode number cannot be reasonably estimated for the 500\,nm iron sample due to the influence of air scattering and fluorescence stemming from the experimental setup and low number of signal photons. For the other samples, the regression gives estimates in the range of 15-25 modes. The charge sharing approximation parameter $p$ is found to be 0.43$\pm$0.01, meaning about 40\% of the photon hits were affected. The simplifications of assuming a uniform charge cloud by using a convolution windows with a flat side lobe leads to disagreement between the slightly curved histograms and the flat regressions in the valleys between integer multiples of the single-photon energy. This is no longer present in the spectra simulated with a Gaussian charge cloud (see \fref{fig:thresholdsfoil}) for an example.
 
 The reconstructions were performed once without discretization and only applying a threshold of 1500\,eV and once with discretization into photons using the thresholds found in the simulation of the spectra. Without discretization, strong artifacts were visible in the reconstruction, which were mostly reduced by the applied photon counting (see \fref{fig:foil_photonmodes} for a comparison).
 
@@ -281,17 +281,16 @@ The reconstructions were performed once without discretization and only applying
 \end{figure}
 
 
-The excited volume can be approximated in the horizontal direction as a rectangular function with a width of $\sqrt{2}$-times the thickness of the foil used, due to the 45° angle, as the horizontal FWHM of the focus is much smaller than the thickness of the foil and ignoring absorption.  In the vertical direction, the volume is limited by the FWHM of the focus and can be roughly approximated to be Gaussian. 
-In a small-angle approximation, the reconstruction is the magnitude squared of the 2D Fourier transform of the volume. As the magnitude squared of the Fourier transform of a Gaussian with FWHM $f$ is another Gaussian with FWHM $\frac{4\sqrt{2}\log{2}}{f}$ and of a rectangular function\footnote{If the foil were thicker, the absorption length $a$ could not be ignored and the more complicated $\left|\mathscr{F}\left(e^{-\frac{x}{a}} \Pi \left(\frac{x}{w}\right)\right)\right|^2 \propto \frac{\cosh \left(\frac{w}{a}\right)-\cos (q w)}{a^2 q^2+1}$
-	could be used instead.} with width $w$ is proportional to $\sinc^2{\left(\frac{q w}{2}\right)}$, a 2D least-squares regression of the product of those functions is performed on the reconstructed image to estimate the focal FWHM \cite{butz2015}. As the horizontal direction is under-sampled, the horizontal profile will not be resolved in the reconstruction.  The function used for the regression is sampled at 25x the resolution in both directions and averaged. This corresponds to a convolution with a rectangular sampling kernel and reduces the effect of undersampling on the values determined by the regression. Furthermore, a rotation parameter is introduced to account for a slight misalignment of the detector.
+The excited volume can be approximated in the horizontal direction as a rectangular function with a width of $\sqrt{2}$-times the thickness of the foil used, due to the 45° angle, as the horizontal FWHM of the focus is much smaller than the thickness of the foil and ignoring absorption.  In the vertical direction, the volume is limited by the FWHM of the focus and can be approximated to be Gaussian. 
+In a small-angle approximation, the reconstruction is the squared magnitude of the 2D Fourier transform of the volume. As the squared magnitude of the Fourier transform of a Gaussian with FWHM $f$ is another Gaussian with FWHM $\frac{4\sqrt{2}\log{2}}{f}$ and of a rectangular function\footnote{If the foil were thicker, the absorption length $a$ could not be ignored and the better approximation $\left|\mathscr{F}\left(e^{-\frac{x}{a}} \Pi \left(\frac{x}{w}\right)\right)\right|^2 \propto \frac{\cosh \left(\frac{w}{a}\right)-\cos (q w)}{a^2 q^2+1}$
+	could be used instead.} with width $w$ is proportional to $\sinc^2{\left(\frac{q w}{2}\right)}$, a 2D least-squares regression of the product of those functions is performed on the reconstructed image to estimate the focal FWHM \cite{butz2015}. As the horizontal direction is under-sampled, the horizontal profile cannot be resolved in the reconstruction.  The function used for the regression is sampled at 25x the resolution in both directions and averaged. This corresponds to a convolution with a rectangular sampling kernel and reduces the effect of undersampling on the values determined by the regression. Furthermore, a rotation parameter is introduced to account for a slight misalignment of the detector.
 
-For a 5\,\textmu m Copper foil placed at three different positions, at the nominal focus and two positions further upstream, results of the auto-correlation reconstruction are shown in \fref{fig:Cu5umreco2d}.
-The regression in these results estimates of the focal width in the vertical direction at the nominal focus position along the beam as (240$\pm$20)\,nm and while defocused by 250\,\textmu m as (380$\pm$40)\, nm. The stated errors only include regression uncertainty. The determined width at the focal position is in good agreement with the width determined by the wire scan, (210$\pm$ 10)\,nm. In \fref{fig:fereco2d} the results for 10\,\textmu m and 500\,nm iron foils as well as an example of the result of the regression is shown. As the 5\,\textmu m and 10\,\textmu m foils suffer from severe undersampling along the horizontal direction, only for the 500\,nm iron foil (\fref{fig:fe500nmreco2d}) the regression of the width in this axis can be performed. The regression estimates the width of the emitting volume in focal position as (500$\pm$250)\,nm in the horizontal direction, agreeing with the expected value of (500$\cdot\sqrt{2})$\,nm.
+For the 5\,\textmu m Copper foil placed at three different positions -- at the nominal focus and two positions further upstream -- results of the auto-correlation reconstruction are shown in \fref{fig:Cu5umreco2d}.
+The regression in these results estimates of focal width in the vertical direction at the nominal focus position along the beam as (240$\pm$20)\,nm and while defocused by 250\,\textmu m as (380$\pm$40)\, nm. The stated errors only include the regression uncertainty. The determined width at the focal position is in good agreement with the width determined by the wire scan, (210$\pm$ 10)\,nm. In \fref{fig:fereco2d} the intensity correlation for the 10\,\textmu m and 500\,nm iron foils as well as an example of the result of the regression is shown. As the 5\,\textmu m and 10\,\textmu m foils suffer from severe undersampling along the horizontal direction, only for the 500\,nm iron foil (\fref{fig:fe500nmreco2d}) the regression of the width in this axis can be performed. The regression estimates the width of the emitting volume in focal position as (500$\pm$250)\,nm in the horizontal direction, agreeing with the expected value of (500$\cdot\sqrt{2})$\,nm.
 
 A comparison of the intensity correlations of shots recorded at different pulse energies, as reported by the upstream energy monitors, shows that for low reported energies the amplitude of the correlations is lower (see \fref{fig:energy_binned}). This confirms the decision to use the energy measurement as a surrogate parameter for pulse length and as a filtering criterion \cite{inoue2019}.
 
-Nevertheless, for all three foils in focal position the signal amplitude can be extrapolated by the regression as 0.004$\pm$0.001 with no significant difference between the samples.
-The noise levels as estimated by the standard deviation over pixels outside the feature containing region of interest are  0.00013 for the copper foil, 0.0002 for the iron 10\,\textmu m foil, and 0.002 for the iron 500\,nm foil. The mean over the regions of interest of standard errors of the mean over the different shots used in the reconstruction are equal to these as well.
+Nevertheless, for all three foils in focal position the signal amplitude is extrapolated by the regression as 0.004$\pm$0.001 with no significant difference between the samples. The noise levels as estimated by the standard deviation over pixels outside the feature containing region of interest are  0.00013 for the copper foil, 0.0002 for the 10\,\textmu m iron  foil, and 0.002 for the 500\,nm  iron  foil. The standard errors of the mean over the different shots used in the reconstruction averaged over the region of interests are equal to these within the stated bounds.
 \vspace*{1cm}
 \begin{figure}
 	\centering
@@ -347,9 +346,9 @@ The noise levels as estimated by the standard deviation over pixels outside the 
 
 The mean number of counted signal photons per pixel after filtering is $0.03\pm0.01$ for the nanoparticle samples as well as the iron chloride reference sample. The number of images analyzed has been limited to 30,000 for each sample, except for the \enquote{10\,nm in PS} sample only having 25,000 usable shots after filtering. At similar signal photon counts on the octal as observed for the foils on the dual detector, the peak in the spectrum at the energy of the FEL beam is more pronounced, leading to difficulties distinguishing higher numbers of photons. Hence, only one and two-photon hits are used in the photon discretization (see \fref{fig:spectrum_nano} for an example).
 
-Using a sample with just the polymer, without any added iron (neither nanoparticles nor atomic), the influence of air scattering on the correlations can be examined. In the results of the iron chloride sample having similar numbers of signal photons, the effect of uncorrected detector artifacts could be seen. Neither result show a strong correlation signal (see \fref{fig:resnano2d}). The strength of the noise as quantified by the standard deviation over pixels outside the center area of the 2d-reconstruction of the samples is (1.4$\pm$0.1)$\cdot$10$^{-4}$.
+Using a sample with just the polymer, without any added iron (neither nanoparticles nor atomic), the influence of air scattering on the correlations can be examined. As the iron chloride sample resulted in similar numbers of iron fluorescence photons, but has no structure at the observed $q$-range, in its autocorrelation the effect of uncorrected detector artifacts would be visible. Neither result shows a strong correlation signal (see \fref{fig:resnano2d}). The strength of the noise as quantified by the standard deviation over pixels outside the center area of the 2D-reconstruction of the samples is (1.4$\pm$0.1)$\cdot$10$^{-4}$.
 
-In the radially averaged $g^2$ of the four different samples (shown in \fref{fig:resnanorad}) neither a feature corresponding to the distance of aggregated particles, as visible in the SAXS measurements, nor a minimum at $q\approx4.5/r$, indicative of spherical samples, can be distinguished. 
+In the radially averaged $g^2$ of the four different samples (shown in \fref{fig:resnanorad}) neither a feature corresponding to the distance of aggregated particles, as visible in the SAXS measurements (see \fref{fig:saxsps}), nor a minimum at $q\approx4.5/r$, indicative of spherical samples, can be distinguished. 
 \FloatBarrier
 \subsection{Imaging Crystals}
 
@@ -388,7 +387,7 @@ For the determination of the crystal orientation and detector offsets, the regre
 	\label{tab:kosselfit}
 \end{table}
 
-Using the determined rotation and translation to determine for each pixel the corresponding $\vec{q}$ and performing the corrected reconstruction (averaging over all images left after filtering) results in a volume of 3750\,x\,4032\,x\,500 pixels$^3$ with maximum extent of approx. $\pm$3\,x\,$\pm$3\,x\,0.5 \AA$^{-3}$. The non-trivial shape of the reconstructed volume is influenced by the placement of the eight individual tiles of the detector, the applied mask to each tile, and the overall detector offset and slight rotation.
+Using the determined rotation and translation to determine for each pixel the corresponding $\vec{q}$ and performing the corrected reconstruction (averaging over all images left after filtering) results in a volume of 3750\,x\,4032\,x\,500 pixels$^3$, corresponding to approximately $\pm$3\,x\,$\pm$3\,x\,0.5 \AA$^{-3}$. The non-trivial shape of the reconstructed volume is influenced by the placement of the eight individual tiles of the detector, the applied mask to each tile, and the overall detector offset and slight rotation.
 
 In slices in the $q_z=$\,0\,nm$^{-1}$ plane, Bragg peaks with a Laue index $h=0$ should be visible. As the determined detector rotation has an estimated uncertainty of approximately $\pm$0.2° in each direction, maximum intensity projections along 10 $q_z$ slices (up to $q_z\approx$\,0.15\,nm$^{-1}$) are shown in \fref{fig:resgaas1} to ensure Bragg peaks slightly rotated out the of the plane would still be visible. Marked areas in the overview on the left are shown in detail on the right. The noise level in the regions of interest around the expected Bragg peak positions estimated from the standard deviation over all pixels in the regions is 0.0002$\pm$0.0001.  No Bragg peaks are clearly distinguishable, i.e., higher than 4$\sigma$,  in the result. Similar results for the second, 45° rotated, sample are shown in \fref{fig:resgaas2}. In both results, the noise level increases in areas with fewer pairs of pixels of the masked detector image contributing, areas with less than 100 pairs are masked and not shown.
 
