--- a/Tex/simulation.tex
+++ b/Tex/simulation.tex
@@ -76,7 +76,7 @@ The signal within each pixel caused by one photon is given by the integral over 
 where $\Delta x$, $\Delta y$ denote the distance of the pixel to the sampled photon center. Afterwards, a Gaussian readout noise is added. The effect of this degradation on the spectrum is illustrated in \fref{fig:degrad}.
 
 \section{Reconstruction of the Structure Factor}
-In the approximation introduced in \fref{sec:idi}, the normalized intensity correlation $g^2(\Delta q)-1$ has to be calculated to recover the structure factor from the simulated fluorescence speckle patterns. The task can be split up into two logical units, the calculation of the autocorrelation and the application of a sufficient normalization.
+In the approximation introduced in \fref{sec:idi}, the normalized intensity correlation $g^2(\Delta\vec{q})-1$ has to be calculated to recover the structure factor from the simulated fluorescence speckle patterns. The task can be split up into two logical units, the calculation of the autocorrelation and the application of a sufficient normalization.
 
 \subsection{Calculation of the Autocorrelation}
 \label{sec:corr}
@@ -205,8 +205,7 @@ To evaluate the different approaches, for a grating with pitch 50\,nm, line widt
 
 \subsection{Accessible Reciprocal Space}
 
-As IDI is based on $g^2(\Delta \vec{q})$, for a set of accessible $\vec{q}$ determined by the experimental geometry ($k$, detector size and distance), IDI can give information about $S(\vec{q})$ at higher $\left|\vec{q}\right|$ than a traditional scattering setup (see also \fref{fig:scatteringvectors}), increasing the numerical aperture, in a small angle regime up to a factor of two. With a flat detector, compared  IDI can give access to a three-dimensional volume in reciprocal space, as shown in \fref{fig:accesibleq} and, with greater $q_z$ coverage the greater the curvature of the Ewald sphere is. This, for example, gives access to multiple Bragg peaks in a single crystal experiment. 
-as shown in the simulation in \fref{fig:accesiblebraggq}, but leads to nontrivial shape of the accessible volume. 
+As IDI is based on $g^2(\Delta \vec{q})$, for a set of accessible $\vec{q}$ determined by the experimental geometry ($k$, detector size and distance), IDI can give information about $S(\vec{q})$ at higher $\left|\vec{q}\right|$ than a traditional scattering setup (see also \fref{fig:scatteringvectors}), increasing the numerical aperture, in a small angle regime up to a factor of two. With a flat detector IDI can give access to a three-dimensional volume in reciprocal space, as shown in \fref{fig:accesibleq}, with greater $q_z$ coverage the greater the curvature of the Ewald sphere is. This, for example, gives access to multiple Bragg peaks in a single crystal experiment as shown in the simulation in \fref{fig:accesiblebraggq}, but leads to nontrivial shape of the accessible volume. 
 
 \begin{figure}
 	\centering
@@ -252,14 +251,14 @@ Separate normalization of each shot according to \fref{eq:normshot}  followed by
 \subsection{Parameters Influencing the Signal and Noise Characteristics}
 \paragraph{Detector Size}
 
-To assess the influence of the number of pixels of a detector on the SNR, a simulation for a 1\,\textmu m thick Copper foil in an 100\,nm FWHM focus was performed. The detector size was varied from 64x64 to 3072x3072 pixels and always placed at the same distance of 1\,m, keeping the mean photon count per pixel constant. The number of correlation averaged over in the reconstruction increases linearly with the number of pixels. For the SNR calculations, the signal is defined as peak intensity, the noise as the standard deviation over independent simulations.  As shown in \fref{fig:SNRdetsize}, under these conditions, the SNR is proportional to the square root of the number of pixels of the detector. 
-Outside of the center area of the reconstruction, the number of different pixel pairs resulting in the same $\Delta{q}$ varies. In a small angle setup, the number of pairs resulting from a finite detector decrease linear in the distance from the center of the reconstruction. In a wide-angle setup, i.e., for a crystal sample, the varying solid angle covered by each pixel results in a nontrivial dependence of the number of pairs and hence of the SNR on $\Delta{q}$ as shown in \fref{fig:pairnoise}.
+To assess the influence of the number of pixels of a detector on the SNR, a simulation for a 1\,\textmu m thick Copper foil in an 100\,nm FWHM focus was performed. The detector size was varied from 64x64 to 3072x3072 pixels and always placed at the same distance of 1\,m, keeping the mean photon count per pixel constant. The number of correlation pairs averaged over in the reconstruction of a particular $\vec{q}$ increases linearly with the number of pixels. For the SNR calculations, the signal is defined as peak intensity, the noise as the standard deviation over independent simulations.  As shown in \fref{fig:SNRdetsize}, under these conditions, the SNR is proportional to the square root of the number of pixels of the detector. 
+Outside of the center area of the reconstruction, the number of different pixel pairs resulting in the same $\Delta{q}$ varies. In a small angle setup, the number of pairs resulting from a finite detector decrease linearly in the distance from the center of the reconstruction. In a wide-angle setup, i.e., for a crystal sample, the varying solid angle covered by each pixel results in a nontrivial dependence of the number of pairs and hence of the SNR on $\Delta{q}$ as shown in \fref{fig:pairnoise}.
 
 
 
 
 \paragraph{Number of Images}
-As shown in \fref{fig:SNRNimages} if only considering shot and phase noise, uncorrelated between different  images, the SNR scales with the square root of the number of images.  This can be used to estimate the number of shots necessary to achieve an SNR $>5$ (Rose Criterion) to be able to verify IDI as an imaging method experimentally. Correlated noise by systematic noise sources does not follow this relation, and should be minimized, for example, by masking out affected areas of the detector.
+As shown in \fref{fig:SNRNimages} if only considering shot and phase noise, uncorrelated between different  images, the SNR scales with the square root of the number of images.  This can be used to estimate the number of shots necessary to achieve an SNR\,$>5$ (Rose Criterion) to be able to verify IDI as an imaging method experimentally \cite{rose}. Correlated noise by systematic noise sources does not follow this relation, and should be minimized, for example, by masking out affected areas of the detector.
 
 \paragraph{Number of Modes}
 To Illustrate the effect of the number of modes on the signal and the SNR, simulations were performed by averaging the intensity over $M$ realizations of the random phases.  In the results of the simulation of a crystalline sample, (\fref{fig:modes}) the predicted $1/M$ scaling of the signal can be seen. Furthermore, as expected, in \fref{fig:SNRNimages} the SNR shows the same scaling.
@@ -287,9 +286,9 @@ To Illustrate the effect of the number of modes on the signal and the SNR, simul
 
 A simulation of a cubic single crystal with a simple cubic lattice of varying size from 20$^3$ to 200$^3$\,atoms was performed. The lattice constant is chosen as 5.7\,\AA, the fluorescence energy as 8\,keV. The simulated detector has 1024x1024 50\,µm sized pixels and is placed 8\,cm from the  sample. The simulation of the fluorescence patterns was performed with 4x4 oversampling and rebinning to the detector size. Only a single coherence mode was simulated. The number of photons emitted by the sample in 4$\pi$ was chosen as half the number of atoms in the sample. Hence, the mean number of photons per pixel is especially for small crystal sizes very small, still higher than the expected photon yield in an experiment.
 
-The peak signal-to-noise ratio was calculated by simulating 2000 independent images and taking the mean intensity at the visible Bragg peaks positions as signal and the standard deviations at those positions over the independent simulations as noise, resulting in an estimated of the peak SNR of a single image.
-Due to the low photon numbers, the Poisson noise is dominating the noise characteristic, and with an increase in atoms in the focus, the SNR increases linear (as shown in \fref{fig:SNRNatoms}). This holds up to the point where the Bragg peaks are no longer fully sampled and the signal decreases linear with a further increase in the number of atoms in the crystal, resulting in a nearly constant peak SNR.
-If instead of considering the peak value of the reconstruction as the signal, the three-dimensional integral over the Bragg peak would be considered as the signal, the decreasing width of the Bragg peak with increasing size of the crystal would result in a nearly constant SNR under these low photon count conditions. 
+The peak signal-to-noise ratio was calculated by simulating 2000 independent images and taking the mean intensity at the visible Bragg peaks positions as signal and the standard deviations at those positions over the independent simulations as noise, resulting in an estimation of the peak SNR of a single image.
+Due to the low photon numbers, the Poisson noise is dominating the noise characteristic, and with an increase in atoms in the focus, the SNR increases linearly (as shown in \fref{fig:SNRNatoms}). This holds up to the point where the Bragg peaks are no longer fully sampled and the signal decreases linearly with a further increase in the number of atoms in the crystal, resulting in a nearly constant peak SNR.
+If instead of considering the peak value of the reconstruction as the signal, the three-dimensional integral over the Bragg peak was considered the signal, the decreasing width of the Bragg peak with increasing size of the crystal would result in a nearly constant SNR under these low photon count conditions. 
 
 
 
@@ -306,7 +305,7 @@ If instead of considering the peak value of the reconstruction as the signal, th
 		\caption{SNR dependence on detector size}
 		\label{fig:SNRdetsize}
 	\end{subfigure}
-	\caption[SNR dependence on crystal size and detector size]{SNR dependence on the crystal size (a): As the crystal size increases, the SNR increases linearly (as shown by the linear regression) with the number of atoms in the sample as long as the Bragg peaks is sufficiently sampled (blue points), in undersampling conditions the signal strength decreases linear with the number of atoms resulting in a near constant SNR (right side of the dashed line). The error bars show the standard deviation of the SNR calculated for the 12 visible Bragg peaks. For details on the simulation parameters, see main text. The SNR dependence on the detector size for a simulated foil sample (b) shows a linear relationship between the square root of the number of pixels and the SNR.}
+	\caption[SNR dependence on crystal size and detector size]{SNR dependence on the crystal size (a): As the crystal size increases, the SNR increases linearly (as shown by the linear regression) with the number of atoms in the sample as long as the Bragg peaks is sufficiently sampled (blue points), in undersampling conditions the signal strength decreases linearly with the number of atoms resulting in a near constant SNR (right side of the dashed line). The error bars show the standard deviation of the SNR calculated for the 12 visible Bragg peaks. For details on the simulation parameters, see main text. The SNR dependence on the detector size for a simulated foil sample (b) shows a linear relationship between the square root of the number of pixels and the SNR.}
 	
 \end{figure}
 
@@ -324,9 +323,9 @@ If instead of considering the peak value of the reconstruction as the signal, th
 
 A simulation with a varying number of spheres placed randomly inside the focal volume while ensuring a minimum distance between neighboring spheres with no other interaction was performed to decide if measuring the fluorescence of more than one nanoparticle in one shot is advantageous.
 The minimum distance was chosen according to the typical size of nanoparticle capping agents; the number of spheres was increased up to a simulated Poisson sphere distribution (see appendix \fref{algo:bridson} for details) as densest random placement of particles, leading to 25\% of the volume filled by possible emitters.
-Three factors determine the structure factor of these samples: The structure factor of the focus, the structure factor of points following the poison sphere distribution, and the structure factor of a single sphere (see \fref{fig:multisphere1} and \fref{fig:multisphere3}). 
+Three factors determine the structure factor of these samples: The structure factor of the focus, the structure factor of points following a Poisson sphere distribution, and the structure factor of a single sphere (see \fref{fig:multisphere1} and \fref{fig:multisphere3}). 
 For spheres with 20\, nm radius, a spacing layer of 5\,nm around each sphere, with  50000 excited atoms per sphere on average, a focus of 200\,nm FWHM, the fluorescence on a 1024x1024 pixel (pixel size 100\,\textmu m) detector placed 30\,cm was simulated. In this geometry, assuming constant distance to the sample for each detector pixel, approximately 1\% of the emitted photons reach the detector.  For each number of spheres, 5000 images were used for a radial reconstruction using the direct method (see \fref{fig:multisphere2}).
-As the number of photons emitted by each sphere was kept constant, opposing effects occur:  With an increasing number of particles, more are photons are emitted, and the Poisson noise is reduced, but the signal strength in low scattering angles decreases as the structure factor changes from a single sphere to a hard-sphere model and the influence of the focal volume and the distribution of the spheres on the structure factor increases, 
+As the number of photons emitted by each sphere was kept constant, opposing effects occur:  With an increasing number of particles, more photons are emitted, and the Poisson noise is reduced. On the other hand, the signal strength in low scattering angles decreases as the structure factor changes from a single sphere to a hard-sphere model and the influence of the focal volume and the distribution of the spheres on the structure factor increases. 
 
 In the case of 16 randomly positioned spheres, the mean distance to the nearest neighbor in the simulation is approximately three times the diameter. Compared to a single sample, the noise as measured by the standard error in the reconstruction is reduced by a factor of 10. At the same time, the  signal strength at the first maximum decreases by a factor of only 3, leading to an overall gain in SNR.  The dense random packing, with a mean nearest simulated neighbor distance of 1.4 times the diameter, reduces the noise further by an additional factor of 5, but  reduces the signal by a factor of 10. Hence, the medium-dense sample shows the best SNR in this simulation.
 
