--- a/Tex/thanks.tex
+++ b/Tex/thanks.tex
@@ -1,6 +1,6 @@
 \chapter*{Acknowledgements}
 \onehalfspacing
-I would like to thank my supervisors, Tais Gorkhover and Thomas Möller, for their continued support; the Gorkhover group at SLAC, i.e., Stephan Kuschel, Matt Ware, and Siqi Li, for the warm welcome to California, for allowing me to learn from them (not only about the life of Selachimorpha), for joined discussions, planning, preparation, and execution of the experiments. \textcolor{white}{Baby shark, do do, do do do do}
+I would like to thank my supervisors, Tais Gorkhover and Thomas Möller, for their continued support; the Gorkhover group at SLAC, i.e., Stephan Kuschel, Matt Ware, and Siqi Li, for the warm welcome to California, for allowing me to learn from them (not only about the life of Selachimorpha\footnote{\textcolor{white}{Baby shark, do do, do do do do}}), for joined discussions, planning, preparation, and execution of the experiments.
 
 Additionally, I would like to thank An Marshal for the help in getting the TEM images, Ben Reeves for his preparation of the GaAs samples, Carina Hedrich for the AAO sample preparation, Amy Cordones-Hahn for guidance in chemistry, and Cindy Patty for general awesomeness.
 
