--- a/Tex/main.tex
+++ b/Tex/main.tex
@@ -251,12 +251,13 @@
 
 \begin{minipage}[b][12cm]{\textwidth}
 	\begin{center}
-		\begin{tabular}{m{12cm}}
+		\begin{tabular}{m{14.5cm}}
 			\large{Hiermit erkläre ich, dass ich die vorliegende Arbeit selbstständig und eigenhändig sowie ohne unerlaubte fremde Hilfe und ausschließlich unter Verwendung der aufgeführten Quellen und Hilfsmittel angefertigt habe. }				\\
 											\\
 											\\
+											\\
 			\midrule
-			\textbf{Datum / Unterschrift}	\\
+			\textbf{Unterschrift}	\\
 		\end{tabular}
 	\end{center}
 \end{minipage}
@@ -324,7 +325,7 @@
 
 
 %%%%%%%%%%%%%%%%   KAPITEL   %%%%%%%%%%%%%%%%%
-\setlength{\parskip}{1mm plus 0.25mm minus 0.25mm}
+\setlength{\parskip}{1mm plus 0.25mm minus 0.2mm}
 \pagenumbering{arabic}
 \pagestyle{headings}
 \fancyhf{} 
